--- a/src/meta_sl/load_dataset/load_sinusoid.ipynb
+++ b/src/meta_sl/load_dataset/load_sinusoid.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "11Q_LS3GAYUe"
    },
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "SGiFUDo4AYXb"
    },
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "id": "OVVdyOxrAYbJ"
    },
@@ -75,11 +75,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "id": "ZJ18XoSpApSP"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "support_x shape : torch.Size([3, 5, 1])\n",
+      " support_y shape : torch.Size([3, 5, 1])\n",
+      " query_x shape   : torch.Size([3, 5, 1])\n",
+      " query_y shape   : torch.Size([3, 5, 1])\n"
+     ]
+    }
+   ],
    "source": [
     "for batch_idx, batch in enumerate(val_dataloader):\n",
     "    xs, ys = batch\n",
@@ -89,14 +100,10 @@
     "    query_ys = ys[:, config[\"num_shots\"] :, :].to(device=config[\"device\"]).type(torch.float)\n",
     "\n",
     "    print(\n",
-    "        f\"support_x shape :\",\n",
-    "        {support_xs.shape},\n",
-    "        f\"support_y shape :\",\n",
-    "        {support_ys.shape},\n",
-    "        f\"query_x shape   :\",\n",
-    "        {query_xs.shape},\n",
-    "        f\"query_y shape   :\",\n",
-    "        {query_ys.shape},\n",
+    "        f\"support_x shape : {support_xs.shape}\\n\",\n",
+    "        f\"support_y shape : {support_ys.shape}\\n\",\n",
+    "        f\"query_x shape   : {query_xs.shape}\\n\",\n",
+    "        f\"query_y shape   : {query_ys.shape}\",\n",
     "    )\n",
     "\n",
     "    break"
@@ -114,12 +121,20 @@
    "hash": "1e00701f8c0a829a96ff452fb5277f0ece3f4e07662fe9989dbbafc0d5cb5571"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.8 64-bit ('rl')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.8.8"
   }
  },
