Update setup files

--- a/src/meta_sl/load_dataset/load_sinusoid.ipynb
+++ b/src/meta_sl/load_dataset/load_sinusoid.ipynb
@@ -34,7 +34,9 @@
     "        num_tasks=config[\"num_batches_train\"] * config[\"batch_size\"],\n",
     "        noise_std=None,\n",
     "    )\n",
-    "    train_dataloader = BatchMetaDataLoader(train_dataset, batch_size=config[\"batch_size\"])\n",
+    "    train_dataloader = BatchMetaDataLoader(\n",
+    "        train_dataset, batch_size=config[\"batch_size\"]\n",
+    "    )\n",
     "\n",
     "    val_dataset = Sinusoid(\n",
     "        num_samples_per_task=config[\"num_shots\"] * 2,\n",
@@ -94,10 +96,18 @@
    "source": [
     "for batch_idx, batch in enumerate(val_dataloader):\n",
     "    xs, ys = batch\n",
-    "    support_xs = xs[:, : config[\"num_shots\"], :].to(device=config[\"device\"]).type(torch.float)\n",
-    "    query_xs = xs[:, config[\"num_shots\"] :, :].to(device=config[\"device\"]).type(torch.float)\n",
-    "    support_ys = ys[:, : config[\"num_shots\"], :].to(device=config[\"device\"]).type(torch.float)\n",
-    "    query_ys = ys[:, config[\"num_shots\"] :, :].to(device=config[\"device\"]).type(torch.float)\n",
+    "    support_xs = (\n",
+    "        xs[:, : config[\"num_shots\"], :].to(device=config[\"device\"]).type(torch.float)\n",
+    "    )\n",
+    "    query_xs = (\n",
+    "        xs[:, config[\"num_shots\"] :, :].to(device=config[\"device\"]).type(torch.float)\n",
+    "    )\n",
+    "    support_ys = (\n",
+    "        ys[:, : config[\"num_shots\"], :].to(device=config[\"device\"]).type(torch.float)\n",
+    "    )\n",
+    "    query_ys = (\n",
+    "        ys[:, config[\"num_shots\"] :, :].to(device=config[\"device\"]).type(torch.float)\n",
+    "    )\n",
     "\n",
     "    print(\n",
     "        f\"support_x shape : {support_xs.shape}\\n\",\n",
