--- a/src/meta_sl/metric-based/matching_network.ipynb
+++ b/src/meta_sl/metric-based/matching_network.ipynb
@@ -108,10 +108,14 @@
     "            batch_first=True,\n",
     "        )\n",
     "\n",
-    "        self.lstm_cell = nn.LSTMCell(input_size=self.emb_size, hidden_size=self.emb_size)\n",
+    "        self.lstm_cell = nn.LSTMCell(\n",
+    "            input_size=self.emb_size, hidden_size=self.emb_size\n",
+    "        )\n",
     "\n",
     "    @classmethod\n",
-    "    def convBlock(cls, in_channels: int, out_channels: int, kernel_size: int) -> nn.Sequential:\n",
+    "    def convBlock(\n",
+    "        cls, in_channels: int, out_channels: int, kernel_size: int\n",
+    "    ) -> nn.Sequential:\n",
     "        return nn.Sequential(\n",
     "            nn.Conv2d(in_channels, out_channels, kernel_size, padding=1),\n",
     "            nn.BatchNorm2d(out_channels, momentum=1.0, track_running_stats=False),\n",
@@ -125,7 +129,9 @@
     "            dim=0, sizes=[batch_size, self.num_support]\n",
     "        )\n",
     "        support_bilstm, _ = self.bilstm(support_cnn)\n",
-    "        support_bilstm_for, support_bilstm_rev = torch.tensor_split(support_bilstm, 2, dim=-1)\n",
+    "        support_bilstm_for, support_bilstm_rev = torch.tensor_split(\n",
+    "            support_bilstm, 2, dim=-1\n",
+    "        )\n",
     "        return support_bilstm_for + support_bilstm_rev + support_cnn\n",
     "\n",
     "    def read_out(self, hidden: torch.Tensor, support_emb: torch.Tensor) -> torch.Tensor:\n",
@@ -150,11 +156,15 @@
     "        cell_state = query_cnn.new_zeros(query_cnn.shape)\n",
     "\n",
     "        for _ in range(10):\n",
-    "            hidden_state, cell_state = self.lstm_cell(query_cnn, (hidden_state + read_out, cell_state))\n",
+    "            hidden_state, cell_state = self.lstm_cell(\n",
+    "                query_cnn, (hidden_state + read_out, cell_state)\n",
+    "            )\n",
     "            hidden_state = hidden_state + query_cnn\n",
     "            read_out = self.read_out(hidden_state, support_emb)\n",
     "\n",
-    "        query_emb = hidden_state.unflatten(dim=0, sizes=[query_x.shape[0], query_x.shape[1]])\n",
+    "        query_emb = hidden_state.unflatten(\n",
+    "            dim=0, sizes=[query_x.shape[0], query_x.shape[1]]\n",
+    "        )\n",
     "        return query_emb\n",
     "\n",
     "    def forward(\n",
@@ -191,7 +201,9 @@
     "        support_emb_repeat, query_emb_repeat, dim=-1, eps=1e-8\n",
     "    )  # batch_size, num_query, num_support\n",
     "    attention = F.softmax(similarity, dim=-1)  # batch_size, num_query, num_support\n",
-    "    indices = support_y.unsqueeze(1).expand(-1, num_query, -1)  # batch_size, num_query, num_support\n",
+    "    indices = support_y.unsqueeze(1).expand(\n",
+    "        -1, num_query, -1\n",
+    "    )  # batch_size, num_query, num_support\n",
     "\n",
     "    prob = attention.new_zeros((batch_size, num_query, num_ways))\n",
     "    prob.scatter_add_(-1, indices, attention)  # batch_size, num_query, num_ways\n",
@@ -392,9 +404,9 @@
     "\n",
     "train_dataloader, val_dataloader, test_dataloader = get_dataloader(config)\n",
     "\n",
-    "model = MatchingNet(in_channels=1, num_ways=config[\"num_ways\"], num_shots=config[\"num_shots\"]).to(\n",
-    "    device=config[\"device\"]\n",
-    ")\n",
+    "model = MatchingNet(\n",
+    "    in_channels=1, num_ways=config[\"num_ways\"], num_shots=config[\"num_shots\"]\n",
+    ").to(device=config[\"device\"])\n",
     "\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=1e-3)"
@@ -452,7 +464,9 @@
    ],
    "source": [
     "# 메타-트레이닝\n",
-    "with tqdm(zip(train_dataloader, val_dataloader), total=config[\"num_task_batch_train\"]) as pbar:\n",
+    "with tqdm(\n",
+    "    zip(train_dataloader, val_dataloader), total=config[\"num_task_batch_train\"]\n",
+    ") as pbar:\n",
     "    train_accuracies, val_accuracies = [], []\n",
     "    train_losses, val_losses = [], []\n",
     "\n",
@@ -489,7 +503,9 @@
     "        )\n",
     "\n",
     "    # 모델 저장하기\n",
-    "    save_model(output_folder=config[\"output_folder\"], model=model, title=\"matching_network.th\")\n",
+    "    save_model(\n",
+    "        output_folder=config[\"output_folder\"], model=model, title=\"matching_network.th\"\n",
+    "    )\n",
     "\n",
     "    print_graph(\n",
     "        train_accuracies=train_accuracies,\n",
@@ -538,7 +554,9 @@
    ],
    "source": [
     "# 모델 불러오기\n",
-    "load_model(output_folder=config[\"output_folder\"], model=model, title=\"matching_network.th\")\n",
+    "load_model(\n",
+    "    output_folder=config[\"output_folder\"], model=model, title=\"matching_network.th\"\n",
+    ")\n",
     "\n",
     "# 메타-테스팅\n",
     "with tqdm(test_dataloader, total=config[\"num_task_batch_test\"]) as pbar:\n",
