--- a/src/meta_sl/metric-based/prototypical_network.ipynb
+++ b/src/meta_sl/metric-based/prototypical_network.ipynb
@@ -102,7 +102,9 @@
     "        )\n",
     "\n",
     "    @classmethod\n",
-    "    def convBlock(cls, in_channels: int, out_channels: int, kernel_size: int) -> nn.Sequential:\n",
+    "    def convBlock(\n",
+    "        cls, in_channels: int, out_channels: int, kernel_size: int\n",
+    "    ) -> nn.Sequential:\n",
     "        return nn.Sequential(\n",
     "            nn.Conv2d(in_channels, out_channels, kernel_size, padding=1),\n",
     "            nn.BatchNorm2d(out_channels, momentum=1.0, track_running_stats=False),\n",
@@ -110,12 +112,16 @@
     "            nn.MaxPool2d(2),\n",
     "        )\n",
     "\n",
-    "    def get_prototypes(self, embeddings: torch.Tensor, targets: torch.Tensor) -> torch.Tensor:\n",
+    "    def get_prototypes(\n",
+    "        self, embeddings: torch.Tensor, targets: torch.Tensor\n",
+    "    ) -> torch.Tensor:\n",
     "        batch_size = embeddings.shape[0]\n",
     "        indices = targets.unsqueeze(-1).expand_as(embeddings)\n",
     "\n",
     "        prototypes = embeddings.new_zeros((batch_size, self.num_ways, self.emb_size))\n",
-    "        prototypes.scatter_add_(1, indices, embeddings).div_(float(self.num_support) / self.num_ways)\n",
+    "        prototypes.scatter_add_(1, indices, embeddings).div_(\n",
+    "            float(self.num_support) / self.num_ways\n",
+    "        )\n",
     "        return prototypes\n",
     "\n",
     "    def forward(\n",
@@ -123,15 +129,17 @@
     "    ) -> torch.Tensor:\n",
     "        batch_size = support_x.shape[0]\n",
     "\n",
-    "        support_emb = self.embedding_net(support_x.flatten(start_dim=0, end_dim=1)).unflatten(\n",
-    "            dim=0, sizes=[batch_size, self.num_support]\n",
-    "        )\n",
-    "        query_emb = self.embedding_net(query_x.flatten(start_dim=0, end_dim=1)).unflatten(\n",
-    "            dim=0, sizes=[batch_size, self.num_query]\n",
-    "        )\n",
+    "        support_emb = self.embedding_net(\n",
+    "            support_x.flatten(start_dim=0, end_dim=1)\n",
+    "        ).unflatten(dim=0, sizes=[batch_size, self.num_support])\n",
+    "        query_emb = self.embedding_net(\n",
+    "            query_x.flatten(start_dim=0, end_dim=1)\n",
+    "        ).unflatten(dim=0, sizes=[batch_size, self.num_query])\n",
     "        proto_emb = self.get_prototypes(support_emb, support_y)\n",
     "\n",
-    "        distance = torch.sum((query_emb.unsqueeze(2) - proto_emb.unsqueeze(1)) ** 2, dim=-1)\n",
+    "        distance = torch.sum(\n",
+    "            (query_emb.unsqueeze(2) - proto_emb.unsqueeze(1)) ** 2, dim=-1\n",
+    "        )\n",
     "        return distance"
    ]
   },
@@ -278,9 +286,9 @@
     "\n",
     "train_dataloader, val_dataloader, test_dataloader = get_dataloader(config)\n",
     "\n",
-    "model = PrototypicalNet(in_channels=1, num_ways=config[\"num_ways\"], num_shots=config[\"num_shots\"]).to(\n",
-    "    device=config[\"device\"]\n",
-    ")\n",
+    "model = PrototypicalNet(\n",
+    "    in_channels=1, num_ways=config[\"num_ways\"], num_shots=config[\"num_shots\"]\n",
+    ").to(device=config[\"device\"])\n",
     "\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=1e-4)"
@@ -338,7 +346,9 @@
    ],
    "source": [
     "# 메타-트레이닝\n",
-    "with tqdm(zip(train_dataloader, val_dataloader), total=config[\"num_task_batch_train\"]) as pbar:\n",
+    "with tqdm(\n",
+    "    zip(train_dataloader, val_dataloader), total=config[\"num_task_batch_train\"]\n",
+    ") as pbar:\n",
     "    train_accuracies, val_accuracies = [], []\n",
     "    train_losses, val_losses = [], []\n",
     "\n",
@@ -354,7 +364,10 @@
     "            optimizer=optimizer,\n",
     "        )\n",
     "        val_accuracy, val_loss = test_proto(\n",
-    "            device=config[\"device\"], task_batch=val_batch, model=model, criterion=criterion\n",
+    "            device=config[\"device\"],\n",
+    "            task_batch=val_batch,\n",
+    "            model=model,\n",
+    "            criterion=criterion,\n",
     "        )\n",
     "\n",
     "        train_accuracies.append(train_accuracy)\n",
@@ -370,7 +383,11 @@
     "        )\n",
     "\n",
     "    # 모델 저장하기\n",
-    "    save_model(output_folder=config[\"output_folder\"], model=model, title=\"prototypical_network.th\")\n",
+    "    save_model(\n",
+    "        output_folder=config[\"output_folder\"],\n",
+    "        model=model,\n",
+    "        title=\"prototypical_network.th\",\n",
+    "    )\n",
     "\n",
     "    print_graph(\n",
     "        train_accuracies=train_accuracies,\n",
@@ -427,7 +444,9 @@
    ],
    "source": [
     "# 모델 불러오기\n",
-    "load_model(output_folder=config[\"output_folder\"], model=model, title=\"prototypical_network.th\")\n",
+    "load_model(\n",
+    "    output_folder=config[\"output_folder\"], model=model, title=\"prototypical_network.th\"\n",
+    ")\n",
     "\n",
     "# 메타-테스팅\n",
     "with tqdm(test_dataloader, total=config[\"num_task_batch_test\"]) as pbar:\n",
@@ -439,7 +458,10 @@
     "            break\n",
     "\n",
     "        test_accuracy, test_loss = test_proto(\n",
-    "            device=config[\"device\"], task_batch=test_batch, model=model, criterion=criterion\n",
+    "            device=config[\"device\"],\n",
+    "            task_batch=test_batch,\n",
+    "            model=model,\n",
+    "            criterion=criterion,\n",
     "        )\n",
     "        sum_test_accuracies += test_accuracy\n",
     "        sum_test_losses += test_loss\n",
