--- a/src/meta_sl/opt-based/maml_classification.ipynb
+++ b/src/meta_sl/opt-based/maml_classification.ipynb
@@ -17,13 +17,7 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "from torchmeta.datasets.helpers import omniglot\n",
-    "from torchmeta.modules import (\n",
-    "    MetaBatchNorm2d,\n",
-    "    MetaConv2d,\n",
-    "    MetaLinear,\n",
-    "    MetaModule,\n",
-    "    MetaSequential,\n",
-    ")\n",
+    "from torchmeta.modules import MetaBatchNorm2d, MetaConv2d, MetaLinear, MetaModule, MetaSequential\n",
     "from torchmeta.utils.data import BatchMetaDataLoader\n",
     "from torchmeta.utils.gradient_based import gradient_update_parameters\n",
     "from tqdm import tqdm\n",
@@ -108,7 +102,9 @@
     "        self.linear = MetaLinear(self.hidden_size, self.out_features)\n",
     "\n",
     "    @classmethod\n",
-    "    def convBlock(cls, in_channels: int, out_channels: int, kernel_size: int) -> MetaSequential:\n",
+    "    def convBlock(\n",
+    "        cls, in_channels: int, out_channels: int, kernel_size: int\n",
+    "    ) -> MetaSequential:\n",
     "        return MetaSequential(\n",
     "            MetaConv2d(in_channels, out_channels, kernel_size, padding=1, stride=3),\n",
     "            MetaBatchNorm2d(out_channels, momentum=1.0, track_running_stats=False),\n",
@@ -119,7 +115,9 @@
     "        self, x: torch.Tensor, params: Optional[collections.OrderedDict] = None\n",
     "    ) -> torch.Tensor:\n",
     "        x_convs = self.convs(x, params=self.get_subdict(params, \"convs\"))\n",
-    "        prob = self.linear(x_convs.flatten(start_dim=1), params=self.get_subdict(params, \"linear\"))\n",
+    "        prob = self.linear(\n",
+    "            x_convs.flatten(start_dim=1), params=self.get_subdict(params, \"linear\")\n",
+    "        )\n",
     "        return prob"
    ]
   },
@@ -149,11 +147,15 @@
     "    outer_loss = torch.tensor(0.0, device=device)\n",
     "    accuracy = torch.tensor(0.0, device=device)\n",
     "\n",
-    "    for support_x, support_y, query_x, query_y in zip(support_xs, support_ys, query_xs, query_ys):\n",
+    "    for support_x, support_y, query_x, query_y in zip(\n",
+    "        support_xs, support_ys, query_xs, query_ys\n",
+    "    ):\n",
     "        support_prob = model(support_x)\n",
     "        inner_loss = criterion(support_prob, support_y)\n",
     "\n",
-    "        params = gradient_update_parameters(model, inner_loss, step_size=0.4, first_order=True)\n",
+    "        params = gradient_update_parameters(\n",
+    "            model, inner_loss, step_size=0.4, first_order=True\n",
+    "        )\n",
     "\n",
     "        query_prob = model(query_x, params=params)\n",
     "        outer_loss += criterion(query_prob, query_y)\n",
@@ -197,11 +199,15 @@
     "    outer_loss = torch.tensor(0.0, device=device)\n",
     "    accuracy = torch.tensor(0.0, device=device)\n",
     "\n",
-    "    for support_x, support_y, query_x, query_y in zip(support_xs, support_ys, query_xs, query_ys):\n",
+    "    for support_x, support_y, query_x, query_y in zip(\n",
+    "        support_xs, support_ys, query_xs, query_ys\n",
+    "    ):\n",
     "        support_prob = model(support_x)\n",
     "        inner_loss = criterion(support_prob, support_y)\n",
     "\n",
-    "        params = gradient_update_parameters(model, inner_loss, step_size=0.4, first_order=True)\n",
+    "        params = gradient_update_parameters(\n",
+    "            model, inner_loss, step_size=0.4, first_order=True\n",
+    "        )\n",
     "\n",
     "        query_prob = model(query_x, params=params)\n",
     "        outer_loss += criterion(query_prob, query_y)\n",
@@ -330,7 +336,9 @@
     "\n",
     "train_dataloader, val_dataloader, test_dataloader = get_dataloader(config)\n",
     "\n",
-    "model = ConvNet(in_channels=1, out_features=config[\"num_ways\"]).to(device=config[\"device\"])\n",
+    "model = ConvNet(in_channels=1, out_features=config[\"num_ways\"]).to(\n",
+    "    device=config[\"device\"]\n",
+    ")\n",
     "\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=1e-3)"
@@ -388,7 +396,9 @@
    ],
    "source": [
     "# 메타-트레이닝\n",
-    "with tqdm(zip(train_dataloader, val_dataloader), total=config[\"num_task_batch_train\"]) as pbar:\n",
+    "with tqdm(\n",
+    "    zip(train_dataloader, val_dataloader), total=config[\"num_task_batch_train\"]\n",
+    ") as pbar:\n",
     "    train_accuracies = []\n",
     "    val_accuracies = []\n",
     "    train_losses = []\n",
@@ -427,7 +437,9 @@
     "        )\n",
     "\n",
     "# 모델 저장하기\n",
-    "save_model(output_folder=config[\"output_folder\"], model=model, title=\"maml_classification.th\")\n",
+    "save_model(\n",
+    "    output_folder=config[\"output_folder\"], model=model, title=\"maml_classification.th\"\n",
+    ")\n",
     "\n",
     "print_graph(\n",
     "    train_accuracies=train_accuracies,\n",
@@ -476,7 +488,9 @@
    ],
    "source": [
     "# 모델 불러오기\n",
-    "load_model(output_folder=config[\"output_folder\"], model=model, title=\"maml_classification.th\")\n",
+    "load_model(\n",
+    "    output_folder=config[\"output_folder\"], model=model, title=\"maml_classification.th\"\n",
+    ")\n",
     "\n",
     "# 메타-테스팅\n",
     "with tqdm(test_dataloader, total=config[\"num_task_batch_test\"]) as pbar:\n",
