--- a/src/meta_sl/opt-based/maml_regression.ipynb
+++ b/src/meta_sl/opt-based/maml_regression.ipynb
@@ -41,21 +41,27 @@
     "        num_tasks=config[\"num_task_batch_train\"] * config[\"task_batch_size\"],\n",
     "        noise_std=None,\n",
     "    )\n",
-    "    train_dataloader = BatchMetaDataLoader(train_dataset, batch_size=config[\"task_batch_size\"])\n",
+    "    train_dataloader = BatchMetaDataLoader(\n",
+    "        train_dataset, batch_size=config[\"task_batch_size\"]\n",
+    "    )\n",
     "\n",
     "    val_dataset = Sinusoid(\n",
     "        num_samples_per_task=config[\"num_shots\"] * 2,\n",
     "        num_tasks=config[\"num_task_batch_train\"] * config[\"task_batch_size\"],\n",
     "        noise_std=None,\n",
     "    )\n",
-    "    val_dataloader = BatchMetaDataLoader(val_dataset, batch_size=config[\"task_batch_size\"])\n",
+    "    val_dataloader = BatchMetaDataLoader(\n",
+    "        val_dataset, batch_size=config[\"task_batch_size\"]\n",
+    "    )\n",
     "\n",
     "    test_dataset = Sinusoid(\n",
     "        num_samples_per_task=config[\"num_shots\"] * 2,\n",
     "        num_tasks=config[\"num_task_batch_test\"] * config[\"task_batch_size\"],\n",
     "        noise_std=None,\n",
     "    )\n",
-    "    test_dataloader = BatchMetaDataLoader(test_dataset, batch_size=config[\"task_batch_size\"])\n",
+    "    test_dataloader = BatchMetaDataLoader(\n",
+    "        test_dataset, batch_size=config[\"task_batch_size\"]\n",
+    "    )\n",
     "    return train_dataloader, val_dataloader, test_dataloader"
    ]
   },
@@ -116,11 +122,15 @@
     "\n",
     "    outer_loss = torch.tensor(0.0, device=device)\n",
     "\n",
-    "    for support_x, support_y, query_x, query_y in zip(support_xs, support_ys, query_xs, query_ys):\n",
+    "    for support_x, support_y, query_x, query_y in zip(\n",
+    "        support_xs, support_ys, query_xs, query_ys\n",
+    "    ):\n",
     "        support_pred = model(support_x)\n",
     "        inner_loss = criterion(support_pred, support_y)\n",
     "\n",
-    "        params = gradient_update_parameters(model, inner_loss, step_size=0.01, first_order=False)\n",
+    "        params = gradient_update_parameters(\n",
+    "            model, inner_loss, step_size=0.01, first_order=False\n",
+    "        )\n",
     "\n",
     "        query_pred = model(query_x, params=params)\n",
     "        outer_loss += criterion(query_pred, query_y)\n",
@@ -159,11 +169,15 @@
     "\n",
     "    outer_loss = torch.tensor(0.0, device=device)\n",
     "\n",
-    "    for support_x, support_y, query_x, query_y in zip(support_xs, support_ys, query_xs, query_ys):\n",
+    "    for support_x, support_y, query_x, query_y in zip(\n",
+    "        support_xs, support_ys, query_xs, query_ys\n",
+    "    ):\n",
     "        support_pred = model(support_x)\n",
     "        inner_loss = criterion(support_pred, support_y)\n",
     "\n",
-    "        params = gradient_update_parameters(model, inner_loss, step_size=0.01, first_order=False)\n",
+    "        params = gradient_update_parameters(\n",
+    "            model, inner_loss, step_size=0.01, first_order=False\n",
+    "        )\n",
     "\n",
     "        query_pred = model(query_x, params=params)\n",
     "        outer_loss += criterion(query_pred, query_y)\n",
@@ -296,7 +310,9 @@
    ],
    "source": [
     "# 메타-트레이닝\n",
-    "with tqdm(zip(train_dataloader, val_dataloader), total=config[\"num_task_batch_train\"]) as pbar:\n",
+    "with tqdm(\n",
+    "    zip(train_dataloader, val_dataloader), total=config[\"num_task_batch_train\"]\n",
+    ") as pbar:\n",
     "    train_losses = []\n",
     "    val_losses = []\n",
     "\n",
@@ -322,10 +338,14 @@
     "        train_losses.append(train_loss)\n",
     "        val_losses.append(val_loss)\n",
     "\n",
-    "        pbar.set_postfix(train_loss=\"{0:.4f}\".format(train_loss), val_loss=\"{0:.4f}\".format(val_loss))\n",
+    "        pbar.set_postfix(\n",
+    "            train_loss=\"{0:.4f}\".format(train_loss), val_loss=\"{0:.4f}\".format(val_loss)\n",
+    "        )\n",
     "\n",
     "# 모델 저장하기\n",
-    "save_model(output_folder=config[\"output_folder\"], model=model, title=\"maml_regression.th\")\n",
+    "save_model(\n",
+    "    output_folder=config[\"output_folder\"], model=model, title=\"maml_regression.th\"\n",
+    ")\n",
     "\n",
     "print_loss_graph(train_losses=train_losses, val_losses=val_losses)"
    ]
@@ -369,7 +389,9 @@
    ],
    "source": [
     "# 모델 불러오기\n",
-    "load_model(output_folder=config[\"output_folder\"], model=model, title=\"maml_regression.th\")\n",
+    "load_model(\n",
+    "    output_folder=config[\"output_folder\"], model=model, title=\"maml_regression.th\"\n",
+    ")\n",
     "\n",
     "# 메타-테스팅\n",
     "with tqdm(test_dataloader, total=config[\"num_task_batch_test\"]) as pbar:\n",
@@ -386,7 +408,9 @@
     "        )\n",
     "\n",
     "        sum_test_losses += test_loss\n",
-    "        pbar.set_postfix(test_loss=\"{0:.4f}\".format(sum_test_losses / (task_batch_idx + 1)))"
+    "        pbar.set_postfix(\n",
+    "            test_loss=\"{0:.4f}\".format(sum_test_losses / (task_batch_idx + 1))\n",
+    "        )"
    ]
   }
  ],
