Update setup files

--- a/src/meta_sl/model-based/mann.ipynb
+++ b/src/meta_sl/model-based/mann.ipynb
@@ -137,7 +137,13 @@
     "        self.s_layer = nn.Linear(hidden_size, 3)\n",
     "        self.gamma_layer = nn.Linear(hidden_size, 1)\n",
     "\n",
-    "        for layer in [self.k_layer, self.beta_layer, self.g_layer, self.s_layer, self.gamma_layer]:\n",
+    "        for layer in [\n",
+    "            self.k_layer,\n",
+    "            self.beta_layer,\n",
+    "            self.g_layer,\n",
+    "            self.s_layer,\n",
+    "            self.gamma_layer,\n",
+    "        ]:\n",
     "            nn.init.xavier_uniform_(layer.weight, gain=1.4)\n",
     "            nn.init.normal_(layer.bias, std=0.01)\n",
     "\n",
@@ -156,7 +162,11 @@
     "        gamma = 1 + F.softplus(self.gamma_layer(x))\n",
     "\n",
     "        w_c = F.softmax(\n",
-    "            beta * F.cosine_similarity(memory_matrix + 1e-16, k.unsqueeze(1) + 1e-16, dim=-1), dim=1\n",
+    "            beta\n",
+    "            * F.cosine_similarity(\n",
+    "                memory_matrix + 1e-16, k.unsqueeze(1) + 1e-16, dim=-1\n",
+    "            ),\n",
+    "            dim=1,\n",
     "        )\n",
     "        w_g = g * w_c + (1 - g) * previous_state\n",
     "        w_t = self._shift(w_g, s)\n",
@@ -302,7 +312,9 @@
     "        self.memory = Memory(size=memory_size)\n",
     "        self.read_head = ReadHead(memory=self.memory, hidden_size=hidden_size)\n",
     "        self.write_head = WriteHead(memory=self.memory, hidden_size=hidden_size)\n",
-    "        self.controller = LSTMController(input_size=controller_input_size, hidden_size=hidden_size)\n",
+    "        self.controller = LSTMController(\n",
+    "            input_size=controller_input_size, hidden_size=hidden_size\n",
+    "        )\n",
     "\n",
     "        self.fc = nn.Linear(hidden_size + memory_size[1], 5)\n",
     "        nn.init.xavier_uniform_(self.fc.weight, gain=1)\n",
@@ -321,8 +333,13 @@
     "    def forward(\n",
     "        self,\n",
     "        x: torch.Tensor,\n",
-    "        previous_state: Tuple[torch.Tensor, torch.Tensor, torch.Tensor, Tuple[torch.Tensor]],\n",
-    "    ) -> Tuple[torch.Tensor, Tuple[torch.Tensor, torch.Tensor, torch.Tensor, Tuple[torch.Tensor]]]:\n",
+    "        previous_state: Tuple[\n",
+    "            torch.Tensor, torch.Tensor, torch.Tensor, Tuple[torch.Tensor]\n",
+    "        ],\n",
+    "    ) -> Tuple[\n",
+    "        torch.Tensor,\n",
+    "        Tuple[torch.Tensor, torch.Tensor, torch.Tensor, Tuple[torch.Tensor]],\n",
+    "    ]:\n",
     "        (\n",
     "            previous_read,\n",
     "            previous_read_head_state,\n",
@@ -334,7 +351,9 @@
     "        controller_output, controller_state = self.controller(\n",
     "            controller_input, previous_controller_state\n",
     "        )\n",
-    "        read_head_output, read_head_state = self.read_head(controller_output, previous_read_head_state)\n",
+    "        read_head_output, read_head_state = self.read_head(\n",
+    "            controller_output, previous_read_head_state\n",
+    "        )\n",
     "        write_head_state = self.write_head(controller_output, previous_write_head_state)\n",
     "\n",
     "        fc_input = torch.cat((controller_output, read_head_output), dim=1)\n",
@@ -356,12 +375,18 @@
    "cell_type": "code",
    "execution_count": 9,
    "source": [
-    "def generate_sequence(xs: torch.Tensor, ys: torch.Tensor, num_ways: int, device: str) -> torch.Tensor:\n",
+    "def generate_sequence(\n",
+    "    xs: torch.Tensor, ys: torch.Tensor, num_ways: int, device: str\n",
+    ") -> torch.Tensor:\n",
     "    xs_flat = xs.flatten(2, 4)\n",
     "\n",
     "    ys_onehot = F.one_hot(ys, num_classes=num_ways)\n",
     "    ys_cat = torch.cat(\n",
-    "        (torch.zeros(ys_onehot.shape[0], 1, ys_onehot.shape[2]).to(device=device), ys_onehot), dim=1\n",
+    "        (\n",
+    "            torch.zeros(ys_onehot.shape[0], 1, ys_onehot.shape[2]).to(device=device),\n",
+    "            ys_onehot,\n",
+    "        ),\n",
+    "        dim=1,\n",
     "    )[:, :-1, :]\n",
     "\n",
     "    seq = torch.cat((xs_flat, ys_cat), dim=2)\n",
@@ -380,8 +405,12 @@
     "    query_xs_ = query_xs[:, random_indices, :, :, :]\n",
     "    query_ys_ = query_ys[:, random_indices]\n",
     "\n",
-    "    support_seq = generate_sequence(xs=support_xs, ys=support_ys, num_ways=num_ways, device=device)\n",
-    "    query_seq = generate_sequence(xs=query_xs_, ys=query_ys_, num_ways=num_ways, device=device)\n",
+    "    support_seq = generate_sequence(\n",
+    "        xs=support_xs, ys=support_ys, num_ways=num_ways, device=device\n",
+    "    )\n",
+    "    query_seq = generate_sequence(\n",
+    "        xs=query_xs_, ys=query_ys_, num_ways=num_ways, device=device\n",
+    "    )\n",
     "\n",
     "    x_seq = torch.cat((support_seq, query_seq), dim=0)\n",
     "    y_seq = torch.cat((support_ys, query_ys_), dim=1)\n",
@@ -414,7 +443,9 @@
     ") -> Tuple[float, float]:\n",
     "    model.train()\n",
     "\n",
-    "    x_seq_, y_seq_ = generate_sequence_v2(task_batch=task_batch, device=device, num_ways=num_ways)\n",
+    "    x_seq_, y_seq_ = generate_sequence_v2(\n",
+    "        task_batch=task_batch, device=device, num_ways=num_ways\n",
+    "    )\n",
     "    x_seq = x_seq_.to(device=device)\n",
     "    y_seq = y_seq_.to(device=device)\n",
     "\n",
@@ -431,7 +462,9 @@
     "\n",
     "    with torch.no_grad():\n",
     "        num_query = num_ways * num_shots\n",
-    "        correct = torch.sum(prob_[..., -num_query:].argmax(dim=1) == y_seq[..., -num_query:])\n",
+    "        correct = torch.sum(\n",
+    "            prob_[..., -num_query:].argmax(dim=1) == y_seq[..., -num_query:]\n",
+    "        )\n",
     "        accuracy = correct.item() / np.prod(y_seq[..., -num_query:].size())\n",
     "    return accuracy, loss.item()"
    ],
@@ -461,7 +494,9 @@
     ") -> Tuple[float, float]:\n",
     "    model.eval()\n",
     "\n",
-    "    x_seq_, y_seq_ = generate_sequence_v2(task_batch=task_batch, device=device, num_ways=num_ways)\n",
+    "    x_seq_, y_seq_ = generate_sequence_v2(\n",
+    "        task_batch=task_batch, device=device, num_ways=num_ways\n",
+    "    )\n",
     "    x_seq = x_seq_.to(device=device)\n",
     "    y_seq = y_seq_.to(device=device)\n",
     "\n",
@@ -474,7 +509,9 @@
     "\n",
     "    with torch.no_grad():\n",
     "        num_query = num_ways * num_shots\n",
-    "        correct = torch.sum(prob_[..., -num_query:].argmax(dim=1) == y_seq[..., -num_query:])\n",
+    "        correct = torch.sum(\n",
+    "            prob_[..., -num_query:].argmax(dim=1) == y_seq[..., -num_query:]\n",
+    "        )\n",
     "        accuracy = correct.item() / np.prod(y_seq[..., -num_query:].size())\n",
     "    return accuracy, loss.item()"
    ],
@@ -634,7 +671,9 @@
    "execution_count": 15,
    "source": [
     "# Meta-train\n",
-    "with tqdm(zip(train_dataloader, val_dataloader), total=config[\"num_task_batch_train\"]) as pbar:\n",
+    "with tqdm(\n",
+    "    zip(train_dataloader, val_dataloader), total=config[\"num_task_batch_train\"]\n",
+    ") as pbar:\n",
     "    train_accuracies, val_accuracies = [], []\n",
     "    train_losses, val_losses = [], []\n",
     "\n",
