--- a/src/meta_sl/model-based/snail.ipynb
+++ b/src/meta_sl/model-based/snail.ipynb
@@ -129,7 +129,14 @@
     "        self.dilation = dilation\n",
     "        padding = dilation * (kernel_size - 1)\n",
     "        self.conv1d = nn.Conv1d(\n",
-    "            in_channels, out_channels, kernel_size, stride, padding, dilation, groups, bias\n",
+    "            in_channels,\n",
+    "            out_channels,\n",
+    "            kernel_size,\n",
+    "            stride,\n",
+    "            padding,\n",
+    "            dilation,\n",
+    "            groups,\n",
+    "            bias,\n",
     "        )\n",
     "\n",
     "    def forward(self, x: torch.Tensor) -> torch.Tensor:\n",
@@ -146,10 +153,16 @@
    "execution_count": 5,
    "source": [
     "class DenseBlock(nn.Module):\n",
-    "    def __init__(self, in_channels: int, dilation: int, filters: int, kernel_size: int = 2) -> None:\n",
+    "    def __init__(\n",
+    "        self, in_channels: int, dilation: int, filters: int, kernel_size: int = 2\n",
+    "    ) -> None:\n",
     "        super(DenseBlock, self).__init__()\n",
-    "        self.causal_conv1 = CasualConv1d(in_channels, filters, kernel_size, dilation=dilation)\n",
-    "        self.causal_conv2 = CasualConv1d(in_channels, filters, kernel_size, dilation=dilation)\n",
+    "        self.causal_conv1 = CasualConv1d(\n",
+    "            in_channels, filters, kernel_size, dilation=dilation\n",
+    "        )\n",
+    "        self.causal_conv2 = CasualConv1d(\n",
+    "            in_channels, filters, kernel_size, dilation=dilation\n",
+    "        )\n",
     "\n",
     "    def forward(self, x: torch.Tensor) -> torch.Tensor:\n",
     "        xf = self.causal_conv1(x)\n",
@@ -201,7 +214,9 @@
     "        self.key_size = key_size\n",
     "\n",
     "    @classmethod\n",
-    "    def causally_masked_softmax(cls, logits: torch.Tensor, key_size: int) -> torch.Tensor:\n",
+    "    def causally_masked_softmax(\n",
+    "        cls, logits: torch.Tensor, key_size: int\n",
+    "    ) -> torch.Tensor:\n",
     "        seq_len = logits.shape[1]\n",
     "        mask = np.array([[i > j for i in range(seq_len)] for j in range(seq_len)])\n",
     "        mask = torch.BoolTensor(mask).to(logits.get_device())\n",
@@ -256,8 +271,13 @@
     "        x_emb = self.encoder(x_seq)\n",
     "        batch_size = int(y_seq.size()[0] / (self.num_ways * self.num_shots + 1))\n",
     "\n",
-    "        last_idxs = [(i + 1) * (self.num_ways * self.num_shots + 1) - 1 for i in range(batch_size)]\n",
-    "        y_seq[last_idxs] = torch.Tensor(np.zeros((batch_size, y_seq.size()[1]))).to(y_seq.get_device())\n",
+    "        last_idxs = [\n",
+    "            (i + 1) * (self.num_ways * self.num_shots + 1) - 1\n",
+    "            for i in range(batch_size)\n",
+    "        ]\n",
+    "        y_seq[last_idxs] = torch.Tensor(np.zeros((batch_size, y_seq.size()[1]))).to(\n",
+    "            y_seq.get_device()\n",
+    "        )\n",
     "\n",
     "        x_cat = torch.cat((x_emb, y_seq), 1)\n",
     "        x_view = x_cat.view((batch_size, self.num_ways * self.num_shots + 1, -1))\n",
@@ -282,7 +302,10 @@
    "execution_count": 9,
    "source": [
     "def generate_sequence(\n",
-    "    task_batch: Dict[str, List[torch.Tensor]], device: str, num_ways: int, num_shots: int\n",
+    "    task_batch: Dict[str, List[torch.Tensor]],\n",
+    "    device: str,\n",
+    "    num_ways: int,\n",
+    "    num_shots: int,\n",
     ") -> Tuple[torch.Tensor, torch.Tensor, torch.Tensor]:\n",
     "    support_xs = task_batch[\"train\"][0].to(device=device)\n",
     "    support_ys = task_batch[\"train\"][1].to(device=device)\n",
@@ -290,11 +313,19 @@
     "    query_ys = task_batch[\"test\"][1].to(device=device)\n",
     "\n",
     "    chosen_indices = torch.randint(query_xs.shape[1], size=(query_xs.shape[0],))\n",
-    "    chosen_query_xs = query_xs[torch.arange(query_xs.shape[0]), chosen_indices, :, :, :].unsqueeze(1)\n",
-    "    chosen_query_ys = query_ys[torch.arange(query_ys.shape[0]), chosen_indices].unsqueeze(1)\n",
+    "    chosen_query_xs = query_xs[\n",
+    "        torch.arange(query_xs.shape[0]), chosen_indices, :, :, :\n",
+    "    ].unsqueeze(1)\n",
+    "    chosen_query_ys = query_ys[\n",
+    "        torch.arange(query_ys.shape[0]), chosen_indices\n",
+    "    ].unsqueeze(1)\n",
     "\n",
-    "    x_seq = torch.cat((support_xs, chosen_query_xs), dim=1).reshape((-1, *support_xs.shape[2:]))\n",
-    "    y_seq = torch.cat((support_ys, chosen_query_ys), dim=1).reshape((-1, *support_ys.shape[2:]))\n",
+    "    x_seq = torch.cat((support_xs, chosen_query_xs), dim=1).reshape(\n",
+    "        (-1, *support_xs.shape[2:])\n",
+    "    )\n",
+    "    y_seq = torch.cat((support_ys, chosen_query_ys), dim=1).reshape(\n",
+    "        (-1, *support_ys.shape[2:])\n",
+    "    )\n",
     "\n",
     "    y_seq_onehot = F.one_hot(y_seq).float()\n",
     "\n",
@@ -447,7 +478,9 @@
     "\n",
     "train_dataloader, val_dataloader, test_dataloader = get_dataloader(config)\n",
     "\n",
-    "model = SNAIL(num_ways=config[\"num_ways\"], num_shots=config[\"num_shots\"]).to(device=config[\"device\"])\n",
+    "model = SNAIL(num_ways=config[\"num_ways\"], num_shots=config[\"num_shots\"]).to(\n",
+    "    device=config[\"device\"]\n",
+    ")\n",
     "\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = torch.optim.Adam(params=model.parameters(), lr=1e-4)"
@@ -462,7 +495,9 @@
    "execution_count": 15,
    "source": [
     "# Meta-train\n",
-    "with tqdm(zip(train_dataloader, val_dataloader), total=config[\"num_task_batch_train\"]) as pbar:\n",
+    "with tqdm(\n",
+    "    zip(train_dataloader, val_dataloader), total=config[\"num_task_batch_train\"]\n",
+    ") as pbar:\n",
     "    train_accuracies = []\n",
     "    val_accuracies = []\n",
     "    train_losses = []\n",
